--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
 
     <!-- <link rel="stylesheet" type="text/css" href="styles.css"> -->
   </head>
+
   <body>
-    <h1>Hello there!</h1>
-    <a href="/me.html">My other page</a>
+    <h1>Login</h1>
+
     <!-- Define a form in which you will ask your customer to input their password -->
 
 
